changing to virtual threads scenario 8